--- a/Chrome/src/manifest.json
+++ b/Chrome/src/manifest.json
@@ -1,17 +1,20 @@
 {
-  "manifest_version": 2,
+    "manifest_version": 2,
 
-  "name": "NetSuite login skip",
-  "description": "This extension allows you to skip the login page in case you have already logged in in different tab.",
-  "version": "0.1",
-  "browser_action": {
-    "default_icon": "icon.png"
-  },
-  "background": {
-    "persistent": false,
-    "scripts": ["ns_login_skip.js"]
-  },
-  "permissions": [
-    "activeTab"
-  ]
+    "name": "Skip NetSuite login",
+    "description": "This extension allows you to skip the login page in case you have already logged in in different tab.",
+    "author": "Michal Sorentiny",
+    "homepage_url": "https://github.com/Myhall/NetSuite_Login_Skip",
+    "version": "0.2",
+    "page_action": {
+        "default_icon": "icon.png"
+    },
+    "background": {
+        "persistent": false,
+        "scripts": ["ns_login_skip.js"]
+    },
+    "permissions": [
+        "activeTab",
+        "tabs"
+    ]
 }
